--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^7.1.0",
     "node": "^20.5.0",
     "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
     "dayjs": "^1.11.9",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
