installing express and invalid directories

--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
-
 {
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "Tech blog",
-  "main": "index.js", 
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js" 
-   
-    
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
   },
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/i-kare/Tech-Blog.git"
@@ -21,15 +20,15 @@
   },
   "homepage": "https://github.com/i-kare/Tech-Blog#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.0",
-    "node": "^20.5.0",
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
     "dayjs": "^1.11.9",
     "dotenv": "^8.2.0",
-    "express-session": "^1.17.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.3",
     "mysql2": "^2.2.5",
+    "node": "^20.5.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
